--- a/ProjectProposalLaTeX/ProjectProposal.tex
+++ b/ProjectProposalLaTeX/ProjectProposal.tex
@@ -22,7 +22,7 @@
 
 \newcommand{\projectname}{Template}
 \newcommand{\productname}{School Health Service Assistant}
-\newcommand{\projectleader}{P. Bauer}
+\newcommand{\projectleader}{A. Leeb}
 \newcommand{\documentstatus}{In process}
 %\newcommand{\documentstatus}{Submitted}
 %\newcommand{\documentstatus}{Released}
